--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>My Shop</h1>
         </div>
         <div class="contact-info">
-            <p>Call Us: +123 456 789 | Email: support@shopmate.com</p>
+            <p>Call Us: +880 1995 6494 31 | Email: sahad.cse8.bu@gmail.com</p>
         </div>
     </header>
     <!-- nav bar -->
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <!-- Featured Products Section -->
+    <!-- Products Section -->
     <div class="product">
         <div class="product_heading">
             <h2>Featured Products</h2>
